# PEPA-Launchpad

./: .gitignore  Cargo.toml  README.md  package.json  pepaswap.config.ts  pnpm-lock.yaml  tsconfig.base.json  turbo.json
contracts/: README.md
contracts/factory_abi/: Forc.toml
contracts/factory_abi/src/: main.sw
contracts/factory_contract/: Cargo.toml  Forc.toml
contracts/factory_contract/src/: main.sw
contracts/factory_contract/tests/: harness.rs
contracts/fee_model_abi/: Forc.toml
contracts/fee_model_abi/src/: main.sw
contracts/ido_abi/: Forc.toml
contracts/ido_abi/src/: main.sw
contracts/ido_contract/: Cargo.toml  Forc.toml
contracts/ido_contract/src/: main.sw
contracts/ido_contract/tests/: harness.rs
contracts/pricing_lib/: Forc.toml
contracts/pricing_lib/src/: main.sw
contracts/vending_machine_abi/: Forc.toml
contracts/vending_machine_abi/src/: main.sw
contracts/vending_machine_contract/: Forc.toml
contracts/vending_machine_contract/src/: main.sw
docker/: .env  .env.test  Makefile  docker-compose.yml
docs/: CONTRIBUTING.md  GETTING_STARTED.md
scripts/: ci_test.sh
